# pienryhmien-optimointi

./: .coveragerc  .gitignore  .pylintrc  .ruff.toml  Dockerfile  Dockerfile.prod  Dockerfile.test  Dockerfile.webtest  LICENSE  README.md  Tietosuojaseloste.md  alembic.ini  build-and-run.sh  docker-compose.yml  drop.sql  log.html  multistage-migration.sql  output.xml  package-lock.json  pyproject.toml  report.html  requirements.txt  schema.sql  set_env.sh  tasks.py
.github/: README.md
.github/workflows/: main.yml  production.yml  react.yml  staging.yml
algorithms/: README.md  hospital.py  hospital_data_gen.py  hungarian.py  tool.py
algorithms/entities/: group.py  user.py
algorithms/tools/: excelreader.py  piechart.py  tool.py
data/: toydata.xlsx
docs-2.0/: README.md  definition_of_done.md  kayttoohje.md  openshift_guide.md  process_flow_chart.md  project-meetings.md  project-practices.md  testing_guide.md  user_guide.md  workflow_guide.md
docs-2.0/database_docs/: database_migration.md  database_tables.md
documentation/: Definition of done.md  OpenShift.md  README.md  Testing.md  Testing_instructions.md  Tietosuojaseloste.md  UH_ADlogin_to_HAKAlogin.md  __init__.py  architecture.md  database_doc.md  deploying_the_app.md  hungarian.md  kayttoohje_opettaja_DRAFT.md  openshift_guide.md  pdoc3.md  pitaisi_tehda.md  project_meetings.md  project_practices.md  to_be_parsed.csv  toydata.md  user_guide.md  workflow_guide.md
documentation/Shibboleth_ADlogin/: README.md  SP-registery.md  shibboleth_practical.md  shibboleth_technical.md
documentation/database_docs/: database_in_practice.md  database_practice.md  database_schema.md  database_tables.md
frontend/: .gitignore  .prettierignore  .prettierrc  Dockerfile  eslint.config.js  i18next.config.js  index.html  package-lock.json  package.json  testSetup.js  vite.config.js
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/src/: App.jsx  i18n-dynamic-keys.js  i18n.js  main.jsx
frontend/tests/: AdminAnalytics.test.jsx  Footer.test.jsx  FrontPage.test.jsx
local_db/: Dockerfile  README.md  build-and-run-db.sh
migrations/: env.py
migrations/versions/: b692c8b0bafa_test_migration.py
scripts/: README.md  fill_database_with_survey_answers.py  reset_test_db.py  run_playwright_tests.sh  ts.sh
src/: .gitignore  Dockerfile  README.md  __init__.py  app.py  build-and-run.sh  messages.pot  requirements.txt  routes.py  run_flask_app.sh
src/algorithms/: Kohtitutkivaatyötapaa.xlsx  README.md  hospital.py  hospital_data_gen.py  hungarian.py  weights.py
src/entities/: group.py  input_data.py  new_user.py  output_data.py  student.py  survey.py  survey_tools.py  user.py
src/local_db/: README.md  schema.sql
src/repositories/: choice_infos_repository.py  feedback_repository.py  final_group_repository.py  survey_choices_repository.py  survey_owners_repository.py  survey_repository.py  survey_teachers_repository.py  user_rankings_repository.py  user_repository.py
src/services/: choice_infos_service.py  feedback_service.py  final_group_service.py  survey_choices_service.py  survey_owners_service.py  survey_service.py  survey_teachers_service.py  survey_tools.py  user_rankings_service.py  user_service.py
src/templates/: base.html  closedsurvey.html  content-page.html  create_multiphase_survey.html  create_survey.html  edit_survey.html  feedback.html  from_csv.html  group_sizes.html  groups.html  hospital.html  hospital_test.html  hospitalinput_test.html  index.html  input.html  login.html  mock_ad.html  moreinfo.html  register.html  results.html  showrankings.html  survey.html  survey_answers.html  surveys.html  userranking.html
src/tools/: constants.py  data_gen.py  date_converter.py  db_data_gen.py  db_tools.py  excelreader.py  hospital_data_gen.py  ohtu.py  parsers.py  piechart.py  rankings_converter.py  survey_result_helper.py  tool.py
tests/: README.md  conftest.py  feedback_repository_test.py  feedback_service_test.py  final_groups_repository_test.py  headless_testing.robot  hungarian_test.py  local_survey_testing_student.robot  rankings_converter_test.py  resource.robot  staging_testing.robot  student_testing.robot  survey_choices_repository_test.py  survey_choices_service_test.py  survey_owners_repository_test.py  survey_owners_service_test.py  survey_repository_test.py  survey_service_test.py  survey_teachers_repository_test.py  survey_teachers_service_test.py  survey_testing.robot  teacher_testing.robot  test_feedback_repository.py  test_feedback_service.py  test_final_groups_repository.py  test_hungarian.py  test_rankings_converter.py  test_survey_choices_repository.py  test_survey_choices_service.py  test_survey_owner_repository.py  test_survey_owner_service.py  test_survey_repository.py  test_survey_result_helper.py  test_survey_service.py  test_testing.py  test_user_rankings_repository.py  test_user_rankings_service.py  test_user_repository.py  test_user_service.py  test_weights.py  (+6 more)
tests/playwright/: conftest.py  playwright_tools.py  survey_testing.py  teacher_playwright_test.py  test_answer_survey.py  test_create_multistage_survey.py  test_create_survey.py  test_logging.py  test_survey_playwright.py
tests/test_files/: test_survey1.csv  test_survey1.json  test_survey2.csv  test_survey3.csv  test_survey3.json  test_survey4.json  test_survey5.json
(+208 files in other folders)
