[tool.poetry]
name = "pienryhmien-optimointi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
flask = "^2.3.2"
openpyxl = "^3.1.2"
flask-sqlalchemy = "^3.0.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
flask-apscheduler = "^1.12.4"
markdown = "^3.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.7"
pylint = "^2.17.4"
robotframework-databaselibrary = "^1.2.4"
robotframework-seleniumlibrary = "^6.1.0"
selenium = "4.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
