[tool.poetry]
name = "pienryhmien-optimointi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
numpy = "^1.26.4"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
flask = "^3.0.3"
openpyxl = "^3.1.5"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.7"
flask-apscheduler = "^1.13.1"
markdown = "^3.7.0"
flask-wtf = "^1.2.1"
pytest-playwright = "^0.5.2"
flask-babel = "^4.0.0"
pandas = "^2.2.3"
invoke = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.1"
pylint = "^3.3.1"
robotframework-databaselibrary = "^1.2.4"
robotframework-seleniumlibrary = "^6.1.0"
selenium = "4.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
